src/App.css
html, body {
padding: 0;
margin: 0;
height: 100%;
width: 100%;
}

#root {
  margin: 0 auto;
  color: #0A192F;
  min-height: 100vh;
  width: 100%;
  box-sizing: border-box;
  background-color: #0A192F;
}

#mainSection {
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  padding: 25px;
  min-height: 100vh;
  width: 100%;
  gap: 25px;
}

#leftSide {
  display: flex;
  flex-direction: row;
  gap: 25px;
}

#customSection {
  display: flex;
  flex-direction: column;
  background-color: #E6E7E8;
  border-radius: 15px;
  gap: 15px;
  font-weight: bolder;
  padding: 10px;
  height: 138px;
}

.activeSection {
  background-color: #D3E0EA;
  border-radius: 5px;
}

.navButtonImage {
  width: 22px;
  height: 22px;
}

.navButtonContainer {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 5px;
  padding: 5px;
}

#inputSection {
  display: flex;
  flex-direction: column;
  gap: 15px;
  min-width: 420px;
  height: auto;
}

#inputSection > div {
  max-width: 420px;
}

#displayInputButtons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: #E6E7E8;
  padding: 10px;
  border-radius: 15px;
}

#inputContainer {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

#inputContainer > div {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
}

.displayInputContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 5px;
  width: 100%;
}

.displayButton {
  width: 22px;
  height: 22px;
}

#personalInput {
  display: flex;
  flex-direction: column;
  gap: 15px;
  background-color: #E6E7E8;
  padding: 20px;
  border-radius: 15px;
}

.heading {
  font-size:1.3rem;
  font-weight: bolder;
}

#personalForm, #educationForm, #experienceForm {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.personalInfoContainer {
  display: flex;
  flex-direction: column;
  gap: 5px;
  justify-content: center;
  align-items: flex-start;
}

input {
  box-sizing: border-box;
  padding: 5px 10px;
  width: 100%;
  border: 1px;
  border-radius: 10px;
  background-color: #D3E0EA !important;
}

input:focus {
  border-color: #0A192F;
}

label {
  font-weight: bold;
}

.editButton {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.deleteButton {
  width: 100%;
  text-align: center;
  color: white;
  background-color: #F44336;
  border: 1px solid #414a4c;
  cursor: pointer;
  border-radius: 5px;
}

.cancelSaveContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.cancelButton {
  text-align: center;
  width: 100%;
  border: 1px solid #414a4c;
  cursor: pointer;
  border-radius: 5px;
  background-color: #9E9E9E;
  color: white
}

.saveButton {
  width: 100%;
  text-align: center;
  color: white;
  cursor: pointer;
  background-color: #4CAF50;
  border: 1px solid #414a4c;
  border-radius: 5px;
}

#educationInput, #experienceInput {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

#educationInputSection, #experienceInputSection  {
  display: flex;
  flex-direction: column;
  background-color: white;
  border-radius: 15px;
}

.expandButton {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border: none;
  background-color: #E6E7E8;
}

button:focus, button:focus-visible {
  outline: none !important;
}

.expandImage {
  width: 15px;
  height: 15px;
  transition: ease-in-out 0.2s;
}

.active {
  transform: rotate(180deg);
}

.addSectionContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10px;
  gap: 15px;
}

#displayEducationContainer, #displayExpreienceContainer {
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 100%;
}

.displayEducationCard, .displayExperienceCard {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.deleteEducationContainer, .displayExperienceContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5px;
}

.deleteEducationImage, .deleteExperienceImage {
  width: 25px;
  height: 25px;
}

.displayEducation, .displayExperience {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 10px;
  font-weight: bolder;
} 

#addEducationButton, #addExperienceButton {
  border: 3px solid #0A192F;
  width: 200px;
  border-radius: 50px;
  background-color: #E6E7E8;
}

.inputContainer {
  display: flex;
  flex-direction: column;
  padding: 15px;
  border-radius: 15px;
  background-color: #E6E7E8;
}

.timeInput {
  display: flex;
  flex-direction: row;
  gap: 15px;
}

.timeLeftSide, .timeRightSide {
  display: flex;
  flex-direction: column;
}

#clearResumeContainer {
  color: #F44336;
  font-weight: bolder;
  padding: 5px;
  font-size: 0.9rem;
}

#loadResumeContainer{
  font-weight: bolder;
  background-color: #D3E0EA;
  border-radius: 5px;
  padding: 5px;
  font-size: 0.9rem;
}

#rightSide {
  display: flex;
  flex-direction: row;
  gap: 25px;
  width: 100%;
}

#displaySection {
  min-width: 850px;
}

#resumeSection {
  display: flex;
  flex-direction: column;
  gap: 15px;
  background-color: white;
  justify-content: flex-start;
  align-items: center;
  min-height: 830px;
}

#personalDetailsSection {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vh;
  gap: 10px;
  background-color: rgba(220, 174, 150, 0.5);
  padding: 25px 40px;
  min-height: 130px;
}

.topSection {
  font-weight: bolder;
  font-size: 2rem;
}

.bottomSection {
  display: flex;
  flex-direction: row;
  gap: 20px;
}

.bottomSection > div {
  display: flex;
  justify-content: center;
  align-items: center;
}

#educationDetailsSection, #experienceDetailsSection {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  padding: 20px 40px;
  width: 100vh;
}

#educationHeading, #experienceHeading {
  font-size: 1.2rem;
  font-weight: bolder;
  width: 100vh;
  text-align: center;
  padding: 5px 0px;
  background-color: #e8f0fe;
}

#educationContainer {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.educationCard, .experienceCard {
  display: flex;
  flex-direction: row;
  width: 100vh;
  gap: 35px;
  padding-top: 10px;
}

.educationSchool, .experienceCompanyName {
  font-weight: bolder;
}

